--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SummariesConnectionString": "server=ABHINAVSHABU\\SQLEXPRESS;database=SummariesDb;Trusted_Connection=true;Encrypt=false"
+  }
 }
